added the github link to the userstyle info

--- a/bitwardenvault-dark.user.css
+++ b/bitwardenvault-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Bitwarden_Dark
-@namespace      github.com/openstyles/stylus
+@namespace      https://github.com/Adaoh2/bitwardenvault-dark/
 @version        1.0.2
 @description    A dark mode for the bitwarden vault
 @author         Adaoh2
